# mownit

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py
cmake/conan_files/Debug/: Armadillo-Target-debug.cmake  ArmadilloConfig.cmake  BZip2-debug-data.cmake  CMakePresets.json  CvPlot-Target-debug.cmake  CvPlot-debug-data.cmake  CvPlotConfig.cmake  FindArmadillo.cmake  FindCvPlot.cmake  FindJasper.cmake  FindProtobuf.cmake  Iconv-debug-data.cmake  Imath-debug-data.cmake  ImathConfig.cmake  JPEG-debug-data.cmake  Jasper-debug-data.cmake  JasperConfig.cmake  LibLZMA-debug-data.cmake  Ogg-debug-data.cmake  OpenBLAS-Target-debug.cmake  OpenBLAS-debug-data.cmake  OpenBLASConfig.cmake  OpenCV-Target-debug.cmake  OpenCV-debug-data.cmake  OpenCVConfig.cmake  OpenEXR-debug-data.cmake  OpenEXRConfig.cmake  OpenJPEG-debug-data.cmake  OpenJPEGConfig.cmake  OpenSSL-debug-data.cmake  Opus-debug-data.cmake  OpusConfig.cmake  PNG-debug-data.cmake  TIFF-debug-data.cmake  Vorbis-debug-data.cmake  WebP-debug-data.cmake  ZLIB-debug-data.cmake  ade-config.cmake  ade-debug-data.cmake  brotli-debug-data.cmake  (+47 more)
cmake/conan_files/Release/: Armadillo-Target-release.cmake  ArmadilloConfig.cmake  ArmadilloConfigVersion.cmake  ArmadilloTargets.cmake  CMakePresets.json  CvPlot-Target-release.cmake  CvPlot-release-data.cmake  CvPlotConfig.cmake  CvPlotTargets.cmake  FindArmadillo.cmake  FindCvPlot.cmake  FindTIFF.cmake  Imath-release-data.cmake  JPEG-release-data.cmake  Jasper-release-data.cmake  LibLZMA-release-data.cmake  Ogg-release-data.cmake  OpenBLAS-release-data.cmake  OpenBLASConfig.cmake  OpenBLASConfigVersion.cmake  OpenCV-Target-release.cmake  OpenCV-release-data.cmake  OpenCVConfig.cmake  OpenEXR-release-data.cmake  OpenJPEG-release-data.cmake  OpenJPEGConfig.cmake  OpenSSL-release-data.cmake  Opus-release-data.cmake  OpusConfig.cmake  PNG-release-data.cmake  TIFF-release-data.cmake  TIFFConfig.cmake  Vorbis-release-data.cmake  WebP-release-data.cmake  ade-release-data.cmake  brotli-release-data.cmake  conan_toolchain.cmake  conanbuild.bat  conanbuildenv-release.bat  conanrun.sh  (+44 more)
include/: Legend.hpp  derivative.hpp
include/interpolation/: lagrange.hpp
include/interpolation/spline/: boundary_condition.hpp
include/matrix/: back_subst.hpp  gauss_elim_tridiag.hpp  gauss_inv.hpp  jacobi.hpp  solve_tridiag.hpp
include/roots/stop/: dx.hpp
labs/: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp  lab7.cpp  lab9.cpp  test.cpp
labs/functions/: Zeszyt2.xlsx  max_abs_log.gp
labs/lab1/: Arytmetyka Komputerowa.docx
labs/lab3/: Zeszyt1.xlsx
labs/lab5/: max_abs.gp  sum_squared.gp
labs/lab6/: Zeszyt1.xlsx  max_abs.gp  sum_squared.gp  sum_squared_log.gp
labs/lab7/: Zeszyt2.xlsx
labs/lab8/: Rozwiązywanie układów nieliniowych.docx  Zeszyt2.xlsx
labs/lagrange_hermite/: Interpolacja Hermite'a.docx  Zeszyt1.xlsx
madej_1/: CMakeLists.txt  README.txt
madej_1/labs/: Artmetyka Komputerowa.xlsx  Arytmetyka Komputerowa.docx  ~$ytmetyka Komputerowa.docx
madej_2a/: CMakeLists.txt  README.txt  conanfile.py
madej_2a/include/: types.hpp
madej_2a/labs/: lab2.cpp
madej_2a/labs/lab2/: Interpolacja.docx
madej_2a/src/: Legend.cpp
madej_2a/src/nodes/: chebyshev.cpp
madej_2b/: CMakeLists.txt  README.txt
madej_2b/include/: Legend.hpp
madej_2b/include/error/: max.hpp
madej_2b/include/matrix/: row_operations.hpp
madej_2b/labs/: lab3.cpp
madej_2b/src/: Legend.cpp
madej_3/: README.txt  conanfile.py
madej_3/include/: nodes.hpp
madej_3/labs/: lab4.cpp
madej_4a/: README.txt  conanfile.py
madej_4a/include/: types.hpp
madej_4a/labs/: lab5.cpp
madej_4b/: CMakeLists.txt  README.txt
madej_4b/include/: error.hpp
madej_4b/labs/: lab6.cpp
madej_5/: CMakeLists.txt  README.txt
madej_5/include/: matrix.hpp
madej_5/include/approximation/: trigonometric.hpp
madej_5/include/error/: sum_squared.hpp
madej_5/include/interpolation/spline/2/: clamped.hpp
madej_5/include/interpolation/spline/3/: clamped.hpp
madej_5/include/matrix/: thomas.hpp
madej_5/include/roots/stop/: predicate.hpp
madej_5/labs/lab7/: Zeszyt2.xlsx  ~$związywanie układów nieliniowych.docx
madej_5/src/approximation/: least_square.cpp
madej_5/src/interpolation/hermite/: general.cpp
madej_5/src/interpolation/spline/: 2.cpp
madej_5/src/interpolation/spline/2/: natural_spline.cpp
madej_5/src/matrix/: gauss_elim.cpp  gauss_elim_tridiag.cpp  solve.cpp
madej_6/: .gitignore  CMakeLists.txt  README.txt  conanfile.py
madej_6/include/: approximation.hpp  interpolation.hpp  matrix.hpp  types.hpp
madej_6/labs/: lab8.cpp
madej_6/src/: derivative.cpp
madej_7/: CMakeLists.txt  README.txt  conanfile.py
madej_7/include/: roots.hpp
src/approximation/: trigonometric.cpp
src/error/: sum_squared.cpp
src/matrix/: mul_by_vec.cpp_
src/roots/: newton.cpp
(+183 files in other folders)
